[gd_scene load_steps=9 format=3 uid="uid://1qh4q205rany"]

[ext_resource type="Script" path="res://scripts/blue_enemy.gd" id="1_aru6x"]
[ext_resource type="Texture2D" uid="uid://cp4f51x7m01w0" path="res://characterSpritesGame/ThePope_design.png" id="2_afutf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qhe7m"]
atlas = ExtResource("2_afutf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqcgq"]
atlas = ExtResource("2_afutf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2aytw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhe7m")
}],
"loop": true,
"name": &"idel",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqcgq")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nfwmn"]
radius = 86.2844

[sub_resource type="CircleShape2D" id="CircleShape2D_86bkv"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_862vw"]

[node name="BlueEnemy" type="CharacterBody2D"]
script = ExtResource("1_aru6x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_2aytw")
animation = &"idel"

[node name="detectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(0, -30)
shape = SubResource("CircleShape2D_nfwmn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -23)
scale = Vector2(1.69415, 3.86793)
shape = SubResource("CircleShape2D_86bkv")

[node name="EnemyHitBox" type="Area2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(-1.15184, 2.80446)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2(0, -4)
scale = Vector2(1.27308, 1.26969)
shape = SubResource("CircleShape2D_862vw")

[node name="hitDelay" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="EnemyHitBox" to="." method="_on_enemy_hit_box_body_entered"]
[connection signal="body_exited" from="EnemyHitBox" to="." method="_on_enemy_hit_box_body_exited"]
[connection signal="timeout" from="hitDelay" to="." method="_on_hit_delay_timeout"]
